BEM (work,client,portfolio)

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,68 +58,68 @@
     </header>
     <main>
       <!--sechion-portfolio-->
-      <section class="sechion-portfolio section">
-        <div class="container">
+      <section class="portfolio section">
+        <div class="portfolio__content container">
           <h1 class="hidden-title">Портфоліо</h1>
-          <ul class="filter-list list">
-            <li class="filter-item"><button type="button" class="filter-btn all">Усі</button></li>
-            <li class="filter-item">
-              <button type="button" class="filter-btn web">Веб-сайти</button>
+          <ul class="filter__list list">
+            <li class="filter__item"><button type="button" class="filter__btn all">Усі</button></li>
+            <li class="filter__item">
+              <button type="button" class="filter__btn web">Веб-сайти</button>
             </li>
-            <li class="filter-item">
-              <button type="button" class="filter-btn addition">Додатки</button>
+            <li class="filter__item">
+              <button type="button" class="filter__btn addition">Додатки</button>
             </li>
-            <li class="filter-item">
-              <button type="button" class="filter-btn design">Дизайн</button>
+            <li class="filter__item">
+              <button type="button" class="filter__btn design">Дизайн</button>
             </li>
-            <li class="filter-item">
-              <button type="button" class="filter-btn marketing">Маркетинг</button>
+            <li class="filter__item">
+              <button type="button" class="filter__btn marketing">Маркетинг</button>
             </li>
           </ul>
-          <ul class="portfolio-list flex-container list">
-            <li class="portfolio-item flex-element">
-              <a href="#" class="portfolio-link"
-                ><div class="portfolio-tumb">
+          <ul class="portfolio__list list">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link link"
+                ><div class="portfolio__tumb">
                   <img
-                    class="portfolio-card"
+                    class="portfolio__img"
                     src="./images/portfolio_1.jpg"
                     alt="Технокряк"
                     width="370"
                     height="294"
                   />
-                  <div class="overley">
-                    <p class="overlay-text">
+                  <div class="portfolio__overley">
+                    <p class="portfolio__about">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-element">
+                <div class="portfolio__box">
                   <h2 class="portfolio title">Технокряк</h2>
                   <p class="portfolio text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item flex-element">
-              <a href="#" class="portfolio-link">
-                <div class="portfolio-tumb">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link link">
+                <div class="portfolio__tumb">
                   <img
-                    class="portfolio-card"
+                    class="portfolio__img"
                     src="./images/portfolio_2.jpg"
                     alt="Постер New Orlean vs Golden Star"
                     width="370"
                     height="294"
                   />
-                  <div class="overley">
-                    <p class="overlay-text">
+                  <div class="portfolio__overley">
+                    <p class="portfolio__about">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-element">
+                <div class="portfolio__box">
                   <h2 class="portfolio title">
                     Постер
                     <span>New Orlean vs Golden Star</span>
@@ -128,25 +128,25 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item flex-element">
-              <a href="#" class="portfolio-link"
-                ><div class="portfolio-tumb">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link link"
+                ><div class="portfolio__tumb">
                   <img
-                    class="portfolio-card"
+                    class="portfolio__img"
                     src="./images/portfolio_3.jpg"
                     alt="Ресторан Seafood"
                     width="370"
                     height="294"
                   />
-                  <div class="overley">
-                    <p class="overlay-text">
+                  <div class="portfolio__overley">
+                    <p class="portfolio__about">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-element">
+                <div class="portfolio__box">
                   <h2 class="portfolio title">
                     Ресторан
                     <span>Seafood</span>
@@ -155,25 +155,25 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item flex-element">
-              <a href="#" class="portfolio-link">
-                <div class="portfolio-tumb">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link link">
+                <div class="portfolio__tumb">
                   <img
-                    class="portfolio-card"
+                    class="portfolio__img"
                     src="./images/portfolio_4.jpg"
                     alt="Проєкт Prime"
                     width="370"
                     height="294"
                   />
-                  <div class="overley">
-                    <p class="overlay-text">
+                  <div class="portfolio__overley">
+                    <p class="portfolio__about">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-element">
+                <div class="portfolio__box">
                   <h2 class="portfolio title">
                     Проєкт
                     <span>Prime</span>
@@ -182,25 +182,25 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item flex-element">
-              <a href="#" class="portfolio-link"
-                ><div class="portfolio-tumb">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link link"
+                ><div class="portfolio__tumb">
                   <img
-                    class="portfolio-card"
+                    class="portfolio__img"
                     src="./images/portfolio_5.jpg"
                     alt="Проєкт Boxes"
                     width="370"
                     height="294"
                   />
-                  <div class="overley">
-                    <p class="overlay-text">
+                  <div class="portfolio__overley">
+                    <p class="portfolio__about">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-element">
+                <div class="portfolio__box">
                   <h2 class="portfolio title">
                     Проєкт
                     <span>Boxes</span>
@@ -209,49 +209,49 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item flex-element">
-              <a href="#" class="portfolio-link">
-                <div class="portfolio-tumb">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link link">
+                <div class="portfolio__tumb">
                   <img
-                    class="portfolio-card"
+                    class="portfolio__img"
                     src="./images/portfolio_6.jpg"
                     alt="Inspiration has no Borders"
                     width="370"
                     height="294"
                   />
-                  <div class="overley">
-                    <p class="overlay-text">
+                  <div class="portfolio__overley">
+                    <p class="portfolio__about">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-element">
+                <div class="portfolio__box">
                   <h2 class="portfolio title" lang="en">Inspiration has no Borders</h2>
                   <p class="portfolio text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item flex-element">
-              <a href="#" class="portfolio-link">
-                <div class="portfolio-tumb">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link link">
+                <div class="portfolio__tumb">
                   <img
-                    class="portfolio-card"
+                    class="portfolio__img"
                     src="./images/portfolio_7.jpg"
                     alt="Видання Limited Edition"
                     width="370"
                     height="294"
                   />
-                  <div class="overley">
-                    <p class="overlay-text">
+                  <div class="portfolio__overley">
+                    <p class="portfolio__about">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-element">
+                <div class="portfolio__box">
                   <h2 class="portfolio title">
                     Видання
                     <span>Limited Edition</span>
@@ -260,25 +260,25 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item flex-element">
-              <a href="#" class="portfolio-link">
-                <div class="portfolio-tumb">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link link">
+                <div class="portfolio__tumb">
                   <img
-                    class="portfolio-card"
+                    class="portfolio__img"
                     src="./images/portfolio_8.jpg"
                     alt="Проєкт LAB"
                     width="370"
                     height="294"
                   />
-                  <div class="overley">
-                    <p class="overlay-text">
+                  <div class="portfolio__overley">
+                    <p class="portfolio__about">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-element">
+                <div class="portfolio__box">
                   <h2 class="portfolio title">
                     Проєкт
                     <span lang="en">LAB</span>
@@ -287,25 +287,25 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item flex-element">
-              <a href="#" class="portfolio-link"
-                ><div class="portfolio-tumb">
+            <li class="portfolio__item">
+              <a href="#" class="portfolio__link link"
+                ><div class="portfolio__tumb">
                   <img
-                    class="portfolio-card"
+                    class="portfolio__img"
                     src="./images/portfolio_9.jpg"
                     alt="Growing Business"
                     width="370"
                     height="294"
                   />
-                  <div class="overley">
-                    <p class="overlay-text">
+                  <div class="portfolio__overley">
+                    <p class="portfolio__about">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                       Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                       приватну особу.
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-element">
+                <div class="portfolio__box">
                   <h2 class="portfolio title" lang="en">Growing Business</h2>
                   <p class="portfolio text">Додаток</p>
                 </div>
