--- a/index.html
+++ b/index.html
@@ -175,21 +175,21 @@
         </div>
       </section>
       <!-- SECTION WORK -->
-      <section class="section-work section">
-        <div class="container">
-          <h2 class="section title">Чим ми займаємося</h2>
-          <ul class="work-list list">
-            <li class="work-item">
-              <img class="work-card" src="./images/Desktop.jpg" alt="Desktop" width="370" />
-              <p class="work-card-text">Десктопні додатки</p>
+      <section class="work section">
+        <div class="work__content container">
+          <h2 class="work__title section title">Чим ми займаємося</h2>
+          <ul class="work__list list">
+            <li class="work__item">
+              <img class="work__img" src="./images/Desktop.jpg" alt="Desktop" width="370" />
+              <p class="work__text">Десктопні додатки</p>
             </li>
-            <li class="work-item">
-              <img class="work-card" src="./images/Mobile.jpg" alt="Mobile" width="370" />
-              <p class="work-card-text">Мобільні додатки</p>
+            <li class="work__item">
+              <img class="work__img" src="./images/Mobile.jpg" alt="Mobile" width="370" />
+              <p class="work__text">Мобільні додатки</p>
             </li>
-            <li class="work-item">
-              <img class="work-card" src="./images/Design.jpg" alt="Design" width="370" />
-              <p class="work-card-text">Дизайнерські рішення</p>
+            <li class="work__item">
+              <img class="work__img" src="./images/Design.jpg" alt="Design" width="370" />
+              <p class="work__text">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -372,46 +372,46 @@
       </section>
       <!-- SECTION CLIENT -->
       <section class="client-section section">
-        <div class="container">
-          <h2 class="client-title title">Постійні клієнти</h2>
-          <ul class="client-list list">
-            <li class="client-item">
-              <a href="#" class="client-item-link link client-one">
+        <div class="client-section__content container">
+          <h2 class="client-section__title title">Постійні клієнти</h2>
+          <ul class="client-section__list list">
+            <li class="client-section__item">
+              <a href="#" class="client-section__link link">
                 <svg class="icon-client">
                   <use href="./images/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="#" class="client-item-link link client-two">
+            <li class="client-section__item">
+              <a href="#" class="client-section__link link">
                 <svg class="icon-client">
                   <use href="./images/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="#" class="client-item-link link client-four">
+            <li class="client-section__item">
+              <a href="#" class="client-section__link link">
                 <svg class="icon-client">
                   <use href="./images/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="#" class="client-item-link link client-five">
+            <li class="client-section__item">
+              <a href="#" class="client-section__link link">
                 <svg class="icon-client">
                   <use href="./images/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="#" class="client-item-link link client-six">
+            <li class="client-section__item">
+              <a href="#" class="client-section__link link">
                 <svg class="icon-client">
                   <use href="./images/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-item">
-              <a href="#" class="client-item-link link client-three">
+            <li class="client-section__item">
+              <a href="#" class="client-section__link link">
                 <svg class="icon-client">
                   <use href="./images/icons.svg#icon-logo-6"></use>
                 </svg>
